@@ -102,6 +102,7 @@ export(H5Pset_deflate)
 export(H5Pset_fapl_ros3)
 export(H5Pset_fill_time)
 export(H5Pset_fill_value)
+export(H5Pset_filter)
 export(H5Pset_istore_k)
 export(H5Pset_layout)
 export(H5Pset_libver_bounds)
